# sentinel_timelapse

./: .gitignore  CHANGELOG.md  CONDA_PUBLISHING_GUIDE.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  environment.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_results.txt
.github/workflows/: conda-build.yml  release.yml  tests.yml
conda-build/: index.html
conda-build/noarch/: index.html
conda-build/win-64/: index.html
conda-recipe/: README.md  meta.yaml  post-link.sh
notebooks/: notebook_source_test.ipynb  test.ipynb  test.py
sentinel_timelapse/: __init__.py  _bootstrap_geo.py  cli.py  config.py  core.py  file_utils.py  geometry.py  main.py  processing.py  stac.py  utils.py
test_output_2/B04/: B04_B04_20231202T144729.tif  B04_B04_20231207T144721.tif  B04_B04_20231212T144729.tif  B04_B04_20231217T144731.tif  B04_B04_20231222T144729.tif  B04_B04_20231227T144731.tif
test_output_2/visual/: visual_visual_20231202T144729.tif  visual_visual_20231207T144721.tif  visual_visual_20231212T144729.tif  visual_visual_20231217T144731.tif  visual_visual_20231222T144729.tif  visual_visual_20231227T144731.tif
tests/: README.md  conftest.py  run_tests.py  test_bootstrap_geo.py  test_bootstrap_geo_advanced.py  test_cli.py  test_core.py  test_edge_cases.py  test_geometry.py  test_integration.py  test_main.py  test_package_init.py  test_processing.py  test_stac.py  test_usage.py
